--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test":"jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,7 @@
     "multer": "^1.4.2",
     "postman-request": "^2.88.1-postman.30",
     "sharp": "^0.28.3",
+    "supertest": "^6.1.3",
     "validator": "^13.6.0"
   },
   "devDependencies": {
